# Simple-GTK-Chat

./: #meson.build#  README.md  meson.build
src/main/proyecto1/: Proyecto1.cc
src/main/proyecto1/controlador/: Chat.cc  Controlador.cc
src/main/proyecto1/controlador/inc/: Chat.h  Controlador.h
src/main/proyecto1/modelo/: #Servidor.cc#  Cliente.cc  Cuarto.cc  Procesador.cc  Procesador_Cliente.cc  Procesador_Servidor.cc  Servidor.cc  Usuario.cc
src/main/proyecto1/modelo/inc/: Cliente.h  Cliente.h~  Cuarto.h  EnumClassHash.h  Fabrica_Procesadores.h  Procesador.h  Procesador_Cliente.h  Procesador_Servidor.h  Protocolo.h  Servidor.h  Servidor.h~  Usuario.h
src/main/proyecto1/vista/: Vista.cc  Vista_Cliente.cc  Vista_Servidor.cc
src/main/proyecto1/vista/inc/: Vista.h  Vista_Cliente.h  Vista_Servidor.h
src/media/: Cliente.glade  Cliente_name.glade  Cliente_welcome.glade  Invitation_Dialog.glade  Main.glade  Room_Dialog.glade  Room_Election_Dialog.glade  Servidor.glade  Servidor_welcome.glade
src/test/: Test_Aplicacion.cc
